# free-virtual-keyboard

./: README.md
core/: CMakeLists.txt
core/include/: VirtualKeyboard.h  VirtualKeyboardModel.h
core/src/: VirtualKeybaordModel.cpp  VirtualKeyboard.cpp
qml-plugin/: CMakeLists.txt  virtualkeyboard.qrc
qml-plugin/qml/: InputPanel.qml  KeyButton.qml  KeyModel.qml  KeyPopup.qml  KeyboardLayout.qml  LanguageDialog.qml  NumericLayout.qml
qml-plugin/src/: DeclarativeInputEngine.cpp  DeclarativeInputEngine.h  VirtualKeyboardInputContext.cpp  VirtualKeyboardInputContext.h  VirtualKeyboardInputContextPlugin.cpp  VirtualKeyboardInputContextPlugin.h  virtualkeyboard_global.h
